common/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: planit-ingress
  namespace: planit-dev
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    # alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    # alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health
    alb.ingress.kubernetes.io/success-codes: "200-399"
spec:
  ingressClassName: alb
  rules:
    - host: api.barumi-planit.store
      http:
        paths:
          - path: /api/v1/users
            pathType: Prefix
            backend:
              service:
                name: planit-user-svc
                port:
                  number: 8081
          - path: /api/v1/schedules
            pathType: Prefix
            backend:
              service:
                name: planit-schedule-svc
                port:
                  number: 8082
          - path: /api/v1/strategy
            pathType: Prefix
            backend:
              service:
                name: planit-strategy-svc
                port:
                  number: 8083
          - path: /api/v1/categories
            pathType: Prefix
            backend:
              service:
                name: planit-strategy-svc
                port:
                  number: 8083
          - path: /api/v1/trends
            pathType: Prefix
            backend:
              service:
                name: planit-strategy-svc
                port:
                  number: 8083
          - path: /api/v1/ai
            pathType: Prefix
            backend:
              service:
                name: planit-strategy-svc
                port:
                  number: 8083
          - path: /api/v1/insight
            pathType: Prefix
            backend:
              service:
                name: planit-insight-svc
                port:
                  number: 8084
          - path: /api/v1/feedbacks
            pathType: Prefix
            backend:
              service:
                name: planit-insight-svc
                port:
                  number: 8084
          - path: /api/v1/stats
            pathType: Prefix
            backend:
              service:
                name: planit-insight-svc
                port:
                  number: 8084
          - path: /api/v1/reports
            pathType: Prefix
            backend:
              service:
                name: planit-insight-svc
                port:
                  number: 8084
          - path: /api/v1/goals
            pathType: Prefix
            backend:
              service:
                name: planit-insight-svc
                port:
                  number: 8084
